manifests/deployment_template-short.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: <company-name>-deployment # <client-name> - name of company, for example nestle
  namespace: prod
  labels:
    app: <company-name>
spec:
  revisionHistoryLimit: 1
  replicas: 2
  selector:
    matchLabels:
      app: <company-name>
  template:
    metadata:
      labels:
        app: <company-name>
    spec:
      containers:
        - name: <company-name>
          image: <ownid-image-url> # path to image, ex: 571861302935.dkr.ecr.us-east-2.amazonaws.com/ownid-server-netcore3-gigya-staging:latest
          ports:
            - containerPort: 5002
