manifests/result.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ownid-server
    appId: demo4
  name: ownid-server-demo4
  namespace: staging
spec:
  ports:
  - name: http
    port: 80
    targetPort: 5002
  selector:
    app: ownid-server
    appId: demo4
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: ownid-server
    appId: demo4
  name: ownid-server-demo4
  namespace: staging
spec:
  replicas: 2
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: ownid-server
      appId: demo4
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: ownid-server
        appId: demo4
    spec:
      containers:
      - env:
        - name: OWNID__CALLBACK_URL
          value: https://server.demo4.staging.ownid.com
        - name: OWNID__DID
          value: did:ownid:demo_4_staging_151850889514
        - name: OWNID__NAME
          value: Noted (OwnID Demo 4)
        - name: OWNID__DESCRIPTION
          value: Noted (OwnID Demo 4)
        - name: OWNID__AUTHENTICATION_MODE
          value: OwnIdOnly
        - name: OWNID__FIDO2_PASSWORDLESS_PAGE_URL
          value: https://passwordless.demo4.staging.ownid.com
        - name: OWNID__TOP_DOMAIN
          value: demo4.staging.ownid.com
        - name: OWNID__WEB_APP_URL
          value: https://sign.staging.ownid.com
        - name: ASPNETCORE_ENVIRONMENT
          value: staging
        - name: SERILOG__MINIMUMLEVEL__DEFAULT
          value: Debug
        - name: OWNID__ICON
          value: data:image/x-icon;base64,AAABAAIAICAAAAEAIACoEAAAJgAAABAQAAABACAAaAQAAM4QAAAoAAAAIAAAAEAAAAABACAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A// [...]
        - name: OWNID__PUB_KEY
          valueFrom:
            secretKeyRef:
              key: demo_pub_key
              name: credential-secrets
        - name: OWNID__PRIVATE_KEY
          valueFrom:
            secretKeyRef:
              key: demo_private_key
              name: credential-secrets
        - name: GIGYA__DATA_CENTER
          value: us1.gigya.com
        - name: GIGYA__SECRET
          valueFrom:
            secretKeyRef:
              key: demo_gigya_secret
              name: credential-secrets
        - name: GIGYA__API_KEY
          valueFrom:
            secretKeyRef:
              key: demo_gigya_api_key
              name: credential-secrets
        - name: OWNID__CACHE_TYPE
          value: redis
        - name: OWNID__CACHE_CONFIG
          valueFrom:
            secretKeyRef:
              key: redis_config
              name: credential-secrets
        - name: ELASTICCONFIGURATION__ENABLED
          value: "true"
        - name: ELASTICCONFIGURATION__URI
          valueFrom:
            secretKeyRef:
              key: elastic_uri
              name: credential-secrets
        - name: ELASTICCONFIGURATION__USERNAME
          valueFrom:
            secretKeyRef:
              key: elastic_username
              name: credential-secrets
        - name: ELASTICCONFIGURATION__PASSWORD
          valueFrom:
            secretKeyRef:
              key: elastic_password
              name: credential-secrets
        image: ownid.common.repositories.cloud.sap/dev/server/ownid-server-gigya_1.0.1007:0e6983b7f081381977ba2457d7b9a39d73c4b15f
        name: ownid-server
        ports:
        - containerPort: 5002
      imagePullSecrets:
      - name: regcred
