manifests/alpha.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nestle-hipster-deployment
  namespace: alpha
  labels:
    app: nestle-hipster
spec:
  revisionHistoryLimit: 1
  replicas: 2
  selector:
    matchLabels:
      app: nestle-hipster
  template:
    metadata:
      labels:
        app: nestle-hipster
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: nestle-hipster
          image: ownid.common.repositories.cloud.sap/server:latest
          ports:
            - containerPort: 5002
---
apiVersion: v1
kind: Service
metadata:
  name: nestle-hipster-service
  namespace: alpha
spec:
  type: NodePort
  selector:
    app: nestle-hipster
  ports:
    - name: http
      port: 80
      targetPort: 5002
    - name: https
      port: 443
      targetPort: 5002
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nestle-hipster-ingress
  namespace: alpha
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-2:571861302935:certificate/c1f30bae-9a41-446b-8bf7-fc5f232d0e8f
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
  labels:
    app: nestle-hipster
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: ssl-redirect
              servicePort: use-annotation
          - path: /*
            backend:
              serviceName: nestle-hipster-service
              servicePort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bayer-deployment
  namespace: alpha
  labels:
    app: bayer
spec:
  revisionHistoryLimit: 1
  replicas: 2
  selector:
    matchLabels:
      app: bayer
  template:
    metadata:
      labels:
        app: bayer
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: bayer
          image: ownid.common.repositories.cloud.sap/server:latest
          ports:
            - containerPort: 5002
---
apiVersion: v1
kind: Service
metadata:
  name: bayer-service
  namespace: alpha
spec:
  type: NodePort
  selector:
    app: bayer
  ports:
    - name: http
      port: 80
      targetPort: 5002
    - name: https
      port: 443
      targetPort: 5002
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: bayer-ingress
  namespace: alpha
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-2:571861302935:certificate/c1f30bae-9a41-446b-8bf7-fc5f232d0e8f
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
  labels:
    app: bayer
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: ssl-redirect
              servicePort: use-annotation
          - path: /*
            backend:
              serviceName: bayer-service
              servicePort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: universalid-deployment
  namespace: alpha
  labels:
    app: universalid
spec:
  revisionHistoryLimit: 1
  replicas: 2
  selector:
    matchLabels:
      app: universalid
  template:
    metadata:
      labels:
        app: universalid
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: universalid
          image: ownid.common.repositories.cloud.sap/server:latest
          ports:
            - containerPort: 5002
---
apiVersion: v1
kind: Service
metadata:
  name: universalid-service
  namespace: alpha
spec:
  type: NodePort
  selector:
    app: universalid
  ports:
    - name: http
      port: 80
      targetPort: 5002
    - name: https
      port: 443
      targetPort: 5002
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: universalid-ingress
  namespace: alpha
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-2:571861302935:certificate/c1f30bae-9a41-446b-8bf7-fc5f232d0e8f
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
  labels:
    app: universalid
spec:
  rules:
   - http:
        paths:
          - path: /*
            backend:
              serviceName: ssl-redirect
              servicePort: use-annotation
          - path: /*
            backend:
              serviceName: universalid-service
              servicePort: 80
