manifests/staging_old.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ownid-server-netcore3-demo-gigya-2-deployment
  namespace: staging
  labels:
    app: ownid-server-netcore3-demo-gigya-2
spec:
  revisionHistoryLimit: 1
  replicas: 1
  selector:
    matchLabels:
      app: ownid-server-netcore3-demo-gigya-2
  template:
    metadata:
      labels:
        app: ownid-server-netcore3-demo-gigya-2
    spec:
      containers:
        - name: ownid-server-netcore3-demo-gigya-2
          image: 571861302935.dkr.ecr.us-east-2.amazonaws.com/ownid-server-netcore3-gigya-staging:latest
          ports:
            - containerPort: 5002
---
apiVersion: v1
kind: Service
metadata:
  name: ownid-server-netcore3-demo-gigya-2-service
  namespace: staging
spec:
  selector:
    app: ownid-server-netcore3-demo-gigya-2
  ports:
    - port: 5005
      targetPort: 5002
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ownid-server-netcore3-gigya-2-deployment
  namespace: staging
  labels:
    app: ownid-server-netcore3-gigya-2
spec:
  revisionHistoryLimit: 1
  replicas: 1
  selector:
    matchLabels:
      app: ownid-server-netcore3-gigya-2
  template:
    metadata:
      labels:
        app: ownid-server-netcore3-gigya-2
    spec:
      containers:
        - name: ownid-server-netcore3-gigya-2
          image: 571861302935.dkr.ecr.us-east-2.amazonaws.com/ownid-server-netcore3-gigya-staging:latest
          ports:
            - containerPort: 5002
---
apiVersion: v1
kind: Service
metadata:
  name: ownid-server-netcore3-gigya-2-service
  namespace: staging
spec:
  type: NodePort
  selector:
    app: ownid-server-netcore3-gigya-2
  ports:
    - name: http
      port: 80
      targetPort: 5002
    - name: https
      port: 443
      targetPort: 5002
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ownid-server-netcore3-gigya-2-ingress
  namespace: staging
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-2:571861302935:certificate/5ba8e568-3cfa-4de6-861a-939a73533696
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
  labels:
    app: ownid-server-netcore3-gigya-2
spec:
  rules:
   - http:
        paths:
          - path: /*
            backend:
              serviceName: ssl-redirect
              servicePort: use-annotation
          - path: /*
            backend:
              serviceName: ownid-server-netcore3-gigya-2-service
              servicePort: 80
