manifests/universalid.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: universalid-deployment
  namespace: alpha
  labels:
    app: universalid
spec:
  revisionHistoryLimit: 1
  replicas: 2
  selector:
    matchLabels:
      app: universalid
  template:
    metadata:
      labels:
        app: universalid
    spec:
      containers:
        - name: universalid
          image: 571861302935.dkr.ecr.us-east-2.amazonaws.com/ownid-server-netcore3-gigya-staging:latest
          ports:
            - containerPort: 5002
---
apiVersion: v1
kind: Service
metadata:
  name: universalid-service
  namespace: alpha
spec:
  type: NodePort
  selector:
    app: universalid
  ports:
    - name: http
      port: 80
      targetPort: 5002
    - name: https
      port: 443
      targetPort: 5002
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: universalid-ingress
  namespace: alpha
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-2:571861302935:certificate/c1f30bae-9a41-446b-8bf7-fc5f232d0e8f
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
  labels:
    app: universalid
spec:
  rules:
   - http:
        paths:
          - path: /*
            backend:
              serviceName: ssl-redirect
              servicePort: use-annotation
          - path: /*
            backend:
              serviceName: universalid-ingress
              servicePort: 80
